[package]
name = "bevy-spicy-ldtk"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[features]
default = ["bevy_ecs_tilemap"]

[dependencies]
bevy-spicy-ldtk-derive = { path = "./derive" }
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false }
ldtk2 = "0.3.0"
thiserror = "1.0.26"
serde_json = "1.0.66"
serde = "1.0.127"
bevy_spicy_aseprite = { git = "https://github.com/TheNeikos/bevy-spicy-aseprite.git" }
bevy_ecs_tilemap = { optional = true, git = "https://github.com/TheNeikos/bevy_ecs_tilemap", branch = "bevy-track" }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
