[package]
name = "bevy-spicy-ldtk-derive"
version = "0.1.0"
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0.4"
heck = "0.3.3"
ldtk2 = { version = "0.3" }
proc-macro2 = "1.0.28"
nom = "6.2.1"
serde_json = "1.0.66"
